--- a/PROYECTO/estilo/estilo.css
+++ b/PROYECTO/estilo/estilo.css
@@ -1,3 +1,83 @@
-body{
+*{
+	margin:0px;
+}
+.cajon{
+	background-color:#F2F3F4;
+
+}
+
+.navegador{
+	background: #4DBDDB;
+	padding: 20px;
+	margin-bottom: 15px;
+	position: static;
+	color:white;
+}
+.formulario{
+	background: white;
+	position: relative;
+	margin:0 auto;
+	
+	padding:20px;
+	width:350px;
+	height: 350px;
+	align-items: center;
+	border-radius:200px;
 	
 }
+
+
+
+.formulario table{
+	position: relative;
+	margin-top: 27%;
+	margin-left: 12%;
+	
+}
+.formulario td{
+	padding-bottom: 10px;
+	
+}
+
+.formulario input[type=text],input[type=password]{
+	background: rgba(233,233,233,0);
+	padding:10px;
+	margin:auto;
+	font-size: 20px;
+	border-top:none;
+	border-left:none;
+	border-right:none;
+	border-bottom:solid 1px #F2F3F4;
+	transition:0.5s border;
+	outline: none;
+}
+
+::placeholder{
+	font-size: 15px;
+}
+
+
+
+.formulario input[type=text]:hover{
+	border-bottom:solid 1px #4DBDDB;
+}
+
+
+.formulario input[type=password]:hover{
+	border-bottom:solid 1px #4DBDDB;
+}
+.formulario input[type=submit]{
+	background-color:#4DBDDB;
+	border: none;
+	color:white;
+	position:relative;
+	padding:15px;
+	transition:0.2s background ;
+	font-size: 20px;
+}
+.formulario input[type=submit]:hover{
+	background-color:#F2F3F4;
+	color:#4DBDDB;
+	position:relative;
+}
+
