--- a/PROYECTO/estilo/estilo.css
+++ b/PROYECTO/estilo/estilo.css
@@ -17,13 +17,13 @@
 	background: white;
 	position: relative;
 	margin:0 auto;
-	
+
 	padding:20px;
 	width:350px;
 	height: 350px;
 	align-items: center;
 	border-radius:200px;
-	
+
 }
 
 
@@ -32,11 +32,11 @@
 	position: relative;
 	margin-top: 27%;
 	margin-left: 12%;
-	
+
 }
 .formulario td{
 	padding-bottom: 10px;
-	
+
 }
 
 .formulario input[type=text],input[type=password]{
@@ -58,7 +58,7 @@
 
 
 
-.formulario input[type=text]:hover{
+.formulario input[type=text ]:hover{
 	border-bottom:solid 1px #4DBDDB;
 }
 
@@ -72,7 +72,7 @@
 	color:white;
 	position:relative;
 	padding:15px;
-	transition:0.2s background ;
+	transition:0.2s ;
 	font-size: 20px;
 }
 .formulario input[type=submit]:hover{
@@ -80,4 +80,3 @@
 	color:#4DBDDB;
 	position:relative;
 }
-
