--- a/PROYECTO/estilo/estilo.css
+++ b/PROYECTO/estilo/estilo.css
@@ -74,13 +74,13 @@ img {
 	background-color:#4DBDDB;
 	border: none;
 	color:white;
+	text-align: center;
 	position:relative;
 	padding:15px;
 	transition:0.2s ;
-	font-size: 20px;
+	font-size: 15px;
 }
 .formulario input[type=submit]:hover{
-	background-color:#F2F3F4;
-	color:#4DBDDB;
-	position:relative;
+
+
 }
