--- a/PROYECTO/estilo/RegistrarFact.css
+++ b/PROYECTO/estilo/RegistrarFact.css
@@ -2,22 +2,38 @@
 	margin: 0;
 	padding: 0;
 }
-
 body{
-	background: url(../img/fondo.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
+	background-color: #D4FEF9;
 	background-size: cover;
 	background-attachment: fixed;
-
-
 }
 
 h1{
   color: #154360;
 	text-align: center;
 	margin: 0;
+  margin-top: 25px;
 	font-size: 30px
-	margin-bottom:20px;
+	margin-bottom:40px;
   font-family: "Homer Simpson", cursive;
+}
+
+form{
+	width: 450px;
+	margin: auto;
+	background: #3B4D6C;
+	padding: 50px 10px;
+	box-sizing: border-box;
+	margin-top: 40px;
+	border-radius: 30px;
+  text-decoration: none;
+}
+
+input{
+	width: 100%;
+	margin-bottom: 20px;
+	padding: 7px;
+	box-sizing: border-box;
+	font-size: 17px;
+	border: none;
 }
