--- a/PROYECTO/estilo/frmlaboratorio.css
+++ b/PROYECTO/estilo/frmlaboratorio.css
@@ -1,8 +1,23 @@
-*{
-  box-sizing: border-box;
+**{
+	margin: 0;
+	padding: 0;
 }
+
 body{
-  margin: 0;
-  font-family: sans-serif;
-  background: orange;
+	background: url(../img/fondo.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	background-attachment: fixed;
+}
+
+
+h1{
+  color: #154360;
+	text-align: center;
+	margin: 0;
+  margin-top: 30px;
+	font-size: 30px
+	margin-bottom:40px;
+  font-family: "Homer Simpson", cursive;
 }
