--- a/PROYECTO/estilo/frmlaboratorio.css
+++ b/PROYECTO/estilo/frmlaboratorio.css
@@ -21,3 +21,35 @@ h1{
 	margin-bottom:40px;
   font-family: "Homer Simpson", cursive;
 }
+form{
+	width: 450px;
+	margin: auto;
+	background: #3B4D6C;
+	padding: 35px 20px;
+	box-sizing: border-box;
+	margin-top: 40px;
+	border-radius: 30px;
+  text-decoration: none;
+}
+
+input{
+	width: 100%;
+	margin-bottom: 20px;
+	padding: 8px;
+	box-sizing: border-box;
+	font-size: 20px;
+	border: none;
+}
+
+#button{
+	background: #5D6D7E;
+	color: white;
+	padding: 15px;
+  font-size: 20px;
+}
+
+#button:hover{
+	cursor: pointer;
+	background: #DAE4F5;
+	color: black;
+}
