--- a/PROYECTO/estilo/frmempleado.css
+++ b/PROYECTO/estilo/frmempleado.css
@@ -4,7 +4,10 @@
 body{
   margin: 0;
   font-family: sans-serif;
-  background: green;
+  background: white;
+}
+form{
+  background-color: yellowgreen;
 }
 h1{
   text-align: center;
@@ -15,25 +18,15 @@ h1{
   text-align: center;
   max-width: 800%;
 }
-.input-50{
-  width: 30%;
-  border: 2px solid red;
-  border-radius: 5px;
-}
-.input-100{
-  width:40%;
-  border: 2px solid red;
-  border-radius: 5px;
-}
 input{
+  margin-top: 15px;
   margin-bottom: 15px;
   padding: 15px;
 }
-.btn__reset{
-  border: 2px solid red;
-  border-radius: 5px;
-}
+
 .btn__submit{
-  border: 2px solid red;
-  border-radius: 5px;
+  width: 20%;
+}
+.btn__reset{
+  width:20%;
 }
