--- a/PROYECTO/estilo/estilo.css
+++ b/PROYECTO/estilo/estilo.css
@@ -37,7 +37,7 @@ img {
 .formulario table{
 	text-align: center;
 	margin-top: 10%;
-	margin-left: 25%;
+	margin-left: 22%;
 
 }
 .formulario td{
@@ -51,9 +51,11 @@ img {
 	border-top:none;
 	border-left:none;
 	border-right:none;
-	border-bottom:solid 4px #CCEEFF ;
+	border-bottom:solid 1px #CCEEFF ;
 	transition:0.4s border;
 	outline: none;
+  padding:10px;
+  width:100%;
 }
 
 ::placeholder{
@@ -64,23 +66,24 @@ img {
 
 .formulario input[type=text ]:hover{
 	border-bottom:solid 1px #4DBDDB;
+
 }
 
 
 .formulario input[type=password]:hover{
-	border-bottom:solid 1px #4DBDDB;
+	border-bottom:solid 2px #4DBDDB;
 }
 .formulario input[type=submit]{
 	background-color:#4DBDDB;
 	border: none;
 	color:white;
-	text-align: center;
+  width:100%;
 	position:relative;
 	padding:15px;
 	transition:0.2s ;
 	font-size: 15px;
 }
 .formulario input[type=submit]:hover{
-
+  background: red;
 
 }
