--- a/PROYECTO/estilo/menu_tabla.css
+++ b/PROYECTO/estilo/menu_tabla.css
@@ -1,10 +1,34 @@
+*{
+	margin:0px;
+	font-family: "century gothic";
+}
 .tabla{
-	background: red;
+
+	
 	margin:auto;
-	width: 100%;
-	height: 540px;
+	margin-top: 30px;
+	width: 80%;
+	height: 250px;
 	position: relative;
+
+}
+.tabla th{
+	background: #364145;
+	width:100%;
+	height: 60px;
+	color:white;
+	text-align: center;
+	font-size: 20px;
+
 }
 .tabla td{
-	background: blue;
+	background: white;
+
+	border:inset 0pt;
+}
+td img{
+	width:100px;
+	height:100px;
+	margin:auto;
+	position: relative;
 }
