--- a/PROYECTO/estilo/menu.css
+++ b/PROYECTO/estilo/menu.css
@@ -39,24 +39,26 @@ body{
 }
 
 .seccion{
-	background: rgba(242, 243, 244,0.3);
+	background: rgba(242, 243, 244,1);
 	position: relative;
-	width:940px;
+	width:70%;
 	height: 550px;
 	float:left;
 	margin:10px;
 	margin-left: 0px;
-	box-shadow: 0px 0px 3px black;
+	/*box-shadow: 0px 0px 3px black;*/
 }
 .seccion img{
-	width:240px;
-	height:240px;
-	margin-left: 50%;
+	width:200px;
+	height:200px;
+	float: right;
+	margin-left: 7%;
+	margin-top: 10%;
 	position: relative;
 	
 }
 .seccion2{
-	background: rgba(242, 243, 244,0.9);
+	background: rgba(242, 243, 244,0.3);
 	position: relative;
 	width:100%;
 	height: 850px;
@@ -69,7 +71,7 @@ body{
 	text-align: left;
 	color:#364145;
 	background: transparent;
-	width:600px;
+	width:700px;
 	height:200px;
 	margin-left:100px;
 	margin-top:60px;
@@ -143,7 +145,7 @@ body{
 	
 	color:#35BFEE;
 	border-bottom:solid 1px #35BFEE;
-	
+
 }
 li{
 	top:15px;
