--- a/PROYECTO/estilo/menu.css
+++ b/PROYECTO/estilo/menu.css
@@ -8,7 +8,6 @@
 }
 .navegador{
 	background: #364145;
-	
 	width: 100%;
 	height:50px;
 	text-align: right;
@@ -33,13 +32,14 @@
 
 
 body{
-	background-image: url(https://www.alchemywithalex.com/wp-content/uploads/2018/03/5jxh4o.jpg);
+	background-image: url(../img/fondo_general.png);
 	height: 100%;
 	width: 100%;
 }
 
 .seccion{
-	background: rgba(242, 243, 244,1);
+	/*background: rgba(68, 155, 213,1);*/
+	background: #35BFEE;
 	position: relative;
 	width:70%;
 	height: 550px;
@@ -52,13 +52,13 @@ body{
 	width:200px;
 	height:200px;
 	float: right;
-	margin-left: 7%;
+	
 	margin-top: 10%;
 	position: relative;
 	
 }
 .seccion2{
-	background: rgba(242, 243, 244,0.3);
+	background: rgba(242, 243, 244,0.9);
 	position: relative;
 	width:100%;
 	height: 850px;
@@ -68,10 +68,10 @@ body{
 	box-shadow: 0px 0px 1px black;
 }
 .articulo{
-	text-align: left;
-	color:#364145;
+	text-align: justify;
+	color:white;
 	background: transparent;
-	width:700px;
+	width:800px;
 	height:200px;
 	margin-left:100px;
 	margin-top:60px;
@@ -83,13 +83,14 @@ body{
 
 .aside{
 	background: #364145;
+	
 	margin:10px;
 	margin-right: 0px;
 	position: relative;
 	float:right;
 	width: 300px;
 	height: 550px;
-	box-shadow: 0px 0px 9px black;
+	box-shadow: 0px 0px 2px black;
 }
 .aside form{
 	margin:auto;
@@ -155,11 +156,18 @@ li{
 	margin:15px;
 }
 .pie{
-	background: linear-gradient( to top,#364145,rgba(255,255,255,0));
+	/*background: linear-gradient( to top,#364145,rgba(255,255,255,0));*/
+	background: #364145;
 	position: fixed;
 	width: 100%;
 	height:50px;
 	bottom:0;
 	color:white;
 	text-align: center;
+	letter-spacing:  8px;
+	font-size: 20px;
+}
+.pie .text{
+	margin-top:0.8%;
+	
 }
