--- a/PROYECTO/estilo/menu.css
+++ b/PROYECTO/estilo/menu.css
@@ -91,7 +91,7 @@ body{
 		margin-top:4%;
 	float:right;
 	width: 15%;
-	height: 1%;
+	height: 600px;
 	box-shadow: 0px 0px 2px black;
 }
 .aside form{
@@ -100,7 +100,7 @@ body{
 	position: relative;
 	width:215px;
 	height: 300px;
-
+background: blue;
 
 }
 .aside select{
