--- a/PROYECTO/estilo/menu.css
+++ b/PROYECTO/estilo/menu.css
@@ -42,10 +42,10 @@ body{
 	background: #35BFEE;
 	position: relative;
 	width:70%;
-	height: 700px;
+	height: 600px;
 	float:left;
 	margin:10px;
-	margin-top:4%;
+	margin-top:2%;
 	margin-left: 0px;
 	/*box-shadow: 0px 0px 3px black;*/
 }
@@ -83,14 +83,14 @@ body{
 }
 
 .aside{
-	/* background: #364145; */
-	background: red;
+	 background: #364145; 
+	
 	margin:10px;
 	margin-right: 0px;
 	position: relative;
-		margin-top:4%;
+		margin-top:2%;
 	float:right;
-	width: 15%;
+	width: 19%;
 	height: 600px;
 	box-shadow: 0px 0px 2px black;
 }
@@ -100,7 +100,7 @@ body{
 	position: relative;
 	width:215px;
 	height: 300px;
-background: blue;
+/*background: blue;*/
 
 }
 .aside select{
